deploy: 2236a95dbd4ea79647eb3c617c56c2c5be215680

--- a/genindex.html
+++ b/genindex.html
@@ -83,6 +83,7 @@
  | <a href="#G"><strong>G</strong></a>
  | <a href="#H"><strong>H</strong></a>
  | <a href="#K"><strong>K</strong></a>
+ | <a href="#L"><strong>L</strong></a>
  | <a href="#M"><strong>M</strong></a>
  | <a href="#N"><strong>N</strong></a>
  | <a href="#P"><strong>P</strong></a>
@@ -198,6 +199,18 @@
   </ul></td>
 </tr></table>
 
+<h2 id="L">L</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="source/gaussian_mixture.html#tgmm.gmm.GaussianMixture.load">load() (tgmm.gmm.GaussianMixture class method)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="source/gaussian_mixture.html#tgmm.gmm.GaussianMixture.load_state_dict">load_state_dict() (tgmm.gmm.GaussianMixture method)</a>
+</li>
+  </ul></td>
+</tr></table>
+
 <h2 id="M">M</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -264,10 +277,14 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="source/gaussian_mixture.html#tgmm.gmm.GaussianMixture.sample">sample() (tgmm.gmm.GaussianMixture method)</a>
 </li>
-      <li><a href="source/gaussian_mixture.html#tgmm.gmm.GaussianMixture.score">score() (tgmm.gmm.GaussianMixture method)</a>
+      <li><a href="source/gaussian_mixture.html#tgmm.gmm.GaussianMixture.save">save() (tgmm.gmm.GaussianMixture method)</a>
+</li>
+      <li><a href="source/gaussian_mixture.html#tgmm.gmm.GaussianMixture.save_state_dict">save_state_dict() (tgmm.gmm.GaussianMixture method)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="source/gaussian_mixture.html#tgmm.gmm.GaussianMixture.score">score() (tgmm.gmm.GaussianMixture method)</a>
+</li>
       <li><a href="source/gaussian_mixture.html#tgmm.gmm.GaussianMixture.score_samples">score_samples() (tgmm.gmm.GaussianMixture method)</a>
 </li>
       <li><a href="source/clustering_metrics.html#tgmm.metrics.ClusteringMetrics.silhouette_score">silhouette_score() (tgmm.metrics.ClusteringMetrics static method)</a>
