--- a/genindex.html
+++ b/genindex.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Index &mdash; TorchGMM 0.1.0 documentation</title>
+  <title>Index &mdash; TorchGMM 0.1.7 documentation</title>
       <link rel="stylesheet" type="text/css" href="_static/pygments.css?v=b86133f3" />
       <link rel="stylesheet" type="text/css" href="_static/css/theme.css?v=e59714d7" />
       <link rel="stylesheet" type="text/css" href="_static/custom.css?v=5c7ff671" />
@@ -13,7 +13,7 @@
   
       <script src="_static/jquery.js?v=5d32c60e"></script>
       <script src="_static/_sphinx_javascript_frameworks_compat.js?v=2cd50e6c"></script>
-      <script src="_static/documentation_options.js?v=01f34227"></script>
+      <script src="_static/documentation_options.js?v=ca7ad2ea"></script>
       <script src="_static/doctools.js?v=9bcbadda"></script>
       <script src="_static/sphinx_highlight.js?v=dc90522c"></script>
       <script crossorigin="anonymous" integrity="sha256-Ae2Vz/4ePdIu6ZyI/5ZGsYnb+m0JlOmKPjt6XZ9JJkA=" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.4/require.min.js"></script>
@@ -122,13 +122,15 @@
 </li>
       <li><a href="source/clustering_metrics.html#tgmm.metrics.ClusteringMetrics.classification_report">classification_report() (tgmm.metrics.ClusteringMetrics static method)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="source/clustering_metrics.html#tgmm.metrics.ClusteringMetrics">ClusteringMetrics (class in tgmm.metrics)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="source/clustering_metrics.html#tgmm.metrics.ClusteringMetrics.completeness_score">completeness_score() (tgmm.metrics.ClusteringMetrics static method)</a>
 </li>
       <li><a href="source/clustering_metrics.html#tgmm.metrics.ClusteringMetrics.confusion_matrix">confusion_matrix() (tgmm.metrics.ClusteringMetrics static method)</a>
+</li>
+      <li><a href="source/plotting.html#tgmm.plotting.create_colormap">create_colormap() (in module tgmm.plotting)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -142,11 +144,17 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="source/clustering_metrics.html#tgmm.metrics.ClusteringMetrics.dunn_index">dunn_index() (tgmm.metrics.ClusteringMetrics static method)</a>
 </li>
+      <li><a href="source/plotting.html#tgmm.plotting.dynamic_figsize">dynamic_figsize() (in module tgmm.plotting)</a>
+</li>
   </ul></td>
 </tr></table>
 
 <h2 id="E">E</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="source/plotting.html#tgmm.plotting.ensure_tensor_on_cpu">ensure_tensor_on_cpu() (in module tgmm.plotting)</a>
+</li>
+  </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="source/clustering_metrics.html#tgmm.metrics.ClusteringMetrics.evaluate_clustering">evaluate_clustering() (tgmm.metrics.ClusteringMetrics static method)</a>
 </li>
@@ -172,6 +180,8 @@
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="source/plotting.html#tgmm.plotting.get_covariance_matrix">get_covariance_matrix() (in module tgmm.plotting)</a>
+</li>
       <li><a href="source/gmm_initializer.html#tgmm.gmm_init.GMMInitializer">GMMInitializer (class in tgmm.gmm_init)</a>
 </li>
   </ul></td>
@@ -214,6 +224,8 @@
 <h2 id="M">M</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="source/plotting.html#tgmm.plotting.match_predicted_to_true_labels">match_predicted_to_true_labels() (in module tgmm.plotting)</a>
+</li>
       <li><a href="source/gmm_initializer.html#tgmm.gmm_init.GMMInitializer.maxdist">maxdist() (tgmm.gmm_init.GMMInitializer static method)</a>
 </li>
       <li>
@@ -225,6 +237,8 @@
         <li><a href="source/gmm_initializer.html#module-tgmm.gmm_init">tgmm.gmm_init</a>
 </li>
         <li><a href="source/clustering_metrics.html#module-tgmm.metrics">tgmm.metrics</a>
+</li>
+        <li><a href="source/plotting.html#module-tgmm.plotting">tgmm.plotting</a>
 </li>
       </ul></li>
   </ul></td>
@@ -245,12 +259,14 @@
 <h2 id="P">P</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="source/gmm_initializer.html#tgmm.gmm_init.GMMInitializer.points">points() (tgmm.gmm_init.GMMInitializer static method)</a>
+      <li><a href="source/plotting.html#tgmm.plotting.plot_gmm">plot_gmm() (in module tgmm.plotting)</a>
 </li>
-      <li><a href="source/gaussian_mixture.html#tgmm.gmm.GaussianMixture.predict">predict() (tgmm.gmm.GaussianMixture method)</a>
+      <li><a href="source/gmm_initializer.html#tgmm.gmm_init.GMMInitializer.points">points() (tgmm.gmm_init.GMMInitializer static method)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="source/gaussian_mixture.html#tgmm.gmm.GaussianMixture.predict">predict() (tgmm.gmm.GaussianMixture method)</a>
+</li>
       <li><a href="source/gaussian_mixture.html#tgmm.gmm.GaussianMixture.predict_proba">predict_proba() (tgmm.gmm.GaussianMixture method)</a>
 </li>
       <li><a href="source/clustering_metrics.html#tgmm.metrics.ClusteringMetrics.purity_score">purity_score() (tgmm.metrics.ClusteringMetrics static method)</a>
@@ -316,6 +332,13 @@
 
       <ul>
         <li><a href="source/clustering_metrics.html#module-tgmm.metrics">module</a>
+</li>
+      </ul></li>
+      <li>
+    tgmm.plotting
+
+      <ul>
+        <li><a href="source/plotting.html#module-tgmm.plotting">module</a>
 </li>
       </ul></li>
   </ul></td>
