--- a/_modules/index.html
+++ b/_modules/index.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Overview: module code &mdash; TorchGMM 0.1.0 documentation</title>
+  <title>Overview: module code &mdash; TorchGMM 0.1.7 documentation</title>
       <link rel="stylesheet" type="text/css" href="../_static/pygments.css?v=b86133f3" />
       <link rel="stylesheet" type="text/css" href="../_static/css/theme.css?v=e59714d7" />
       <link rel="stylesheet" type="text/css" href="../_static/custom.css?v=5c7ff671" />
@@ -13,7 +13,7 @@
   
       <script src="../_static/jquery.js?v=5d32c60e"></script>
       <script src="../_static/_sphinx_javascript_frameworks_compat.js?v=2cd50e6c"></script>
-      <script src="../_static/documentation_options.js?v=01f34227"></script>
+      <script src="../_static/documentation_options.js?v=ca7ad2ea"></script>
       <script src="../_static/doctools.js?v=9bcbadda"></script>
       <script src="../_static/sphinx_highlight.js?v=dc90522c"></script>
       <script crossorigin="anonymous" integrity="sha256-Ae2Vz/4ePdIu6ZyI/5ZGsYnb+m0JlOmKPjt6XZ9JJkA=" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.4/require.min.js"></script>
@@ -74,6 +74,7 @@
 <ul><li><a href="tgmm/gmm.html">tgmm.gmm</a></li>
 <li><a href="tgmm/gmm_init.html">tgmm.gmm_init</a></li>
 <li><a href="tgmm/metrics.html">tgmm.metrics</a></li>
+<li><a href="tgmm/plotting.html">tgmm.plotting</a></li>
 </ul>
 
            </div>
