--- a/_modules/tgmm/gmm.html
+++ b/_modules/tgmm/gmm.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>tgmm.gmm &mdash; TorchGMM 0.1.0 documentation</title>
+  <title>tgmm.gmm &mdash; TorchGMM 0.1.7 documentation</title>
       <link rel="stylesheet" type="text/css" href="../../_static/pygments.css?v=b86133f3" />
       <link rel="stylesheet" type="text/css" href="../../_static/css/theme.css?v=e59714d7" />
       <link rel="stylesheet" type="text/css" href="../../_static/custom.css?v=5c7ff671" />
@@ -13,7 +13,7 @@
   
       <script src="../../_static/jquery.js?v=5d32c60e"></script>
       <script src="../../_static/_sphinx_javascript_frameworks_compat.js?v=2cd50e6c"></script>
-      <script src="../../_static/documentation_options.js?v=01f34227"></script>
+      <script src="../../_static/documentation_options.js?v=ca7ad2ea"></script>
       <script src="../../_static/doctools.js?v=9bcbadda"></script>
       <script src="../../_static/sphinx_highlight.js?v=dc90522c"></script>
       <script crossorigin="anonymous" integrity="sha256-Ae2Vz/4ePdIu6ZyI/5ZGsYnb+m0JlOmKPjt6XZ9JJkA=" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.4/require.min.js"></script>
@@ -103,7 +103,12 @@
 <span class="sd">        Number of mixture components (default: 1).</span>
 <span class="sd">    covariance_type : str, optional</span>
 <span class="sd">        Type of covariance parameters to use. Must be one of:</span>
-<span class="sd">        &#39;full&#39;, &#39;diag&#39;, &#39;spherical&#39;, &#39;tied_full&#39;, &#39;tied_diag&#39;, &#39;tied_spherical&#39;.</span>
+<span class="sd">        &#39;full&#39;, &#39;diag&#39;, &#39;spherical&#39;, &#39;isotropic&#39;, &#39;tied_full&#39;, &#39;tied_diag&#39;, &#39;tied_spherical&#39;.</span>
+<span class="sd">        </span>
+<span class="sd">        Note: </span>
+<span class="sd">            - &#39;isotropic&#39; is an alias for &#39;spherical&#39;</span>
+<span class="sd">            - &#39;full&#39; is an alias for &#39;tied_full&#39;.</span>
+<span class="sd">        </span>
 <span class="sd">        (default: &#39;full&#39;)</span>
 <span class="sd">    tol : float, optional</span>
 <span class="sd">        Convergence threshold for EM (relative improvement in log-likelihood).</span>
@@ -230,6 +235,9 @@
         <span class="c1"># Allow &quot;tied&quot; as alias for &quot;tied_full&quot;</span>
         <span class="k">if</span> <span class="n">covariance_type</span> <span class="o">==</span> <span class="s2">&quot;tied&quot;</span><span class="p">:</span>
             <span class="n">covariance_type</span> <span class="o">=</span> <span class="s2">&quot;tied_full&quot;</span>
+        <span class="c1"># Allow &quot;isotropic&quot; as alias for &quot;spherical&quot;</span>
+        <span class="k">if</span> <span class="n">covariance_type</span> <span class="o">==</span> <span class="s2">&quot;isotropic&quot;</span><span class="p">:</span>
+            <span class="n">covariance_type</span> <span class="o">=</span> <span class="s2">&quot;spherical&quot;</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">covariance_type</span> <span class="o">=</span> <span class="n">covariance_type</span>
 
         <span class="bp">self</span><span class="o">.</span><span class="n">tol</span> <span class="o">=</span> <span class="n">tol</span>
@@ -247,7 +255,7 @@
         <span class="c1"># Additional features</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">n_init</span> <span class="o">=</span> <span class="n">n_init</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">cov_init_method</span> <span class="o">=</span> <span class="n">cov_init_method</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">cem</span> <span class="o">=</span> <span class="n">cem</span>  <span class="c1"># Flag to use Classification EM</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">cem</span> <span class="o">=</span> <span class="n">cem</span>
 
         <span class="c1"># Device</span>
         <span class="k">if</span> <span class="n">device</span> <span class="ow">is</span> <span class="ow">not</span> <span class="kc">None</span><span class="p">:</span>
